# odometry

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_odometry_dataset.cpp  run_odometry_kitti_offline.cpp  run_odometry_live.cpp  run_odometry_tum.cpp  test_camera_setup.cpp  test_disparity.cpp  test_optimizer.cpp
calibration_file/: camchain.yaml
docs/: tmp_file
include/: camera.h  data_types.h  depth_estimate.h  frame.h  global_map.h  image_processing_global.h  image_pyramid.h  io_camera.h  keyframe.h  lie_algebras.h  lm_optimizer.h  trajectory_view.h  vis.h  vis_screen.h
src/: camera.cpp  depth_estimate.cpp  frame.cpp  global_map.cpp  image_processing_global.cpp  image_pyramid.cpp  io_camera.cpp  keyframe.cpp  lm_optimizer.cpp  vis.cpp  vis_screen.cpp
